cmake_minimum_required(VERSION 3.10)
project(code)

set(CMAKE_CXX_STANDARD 17)

add_executable(code main.cpp src/medium/StringToInteger_8.cpp "src/pat/PAT_3_Emergency.h" src/easy/ReverseInteger_7.cpp src/easy/ReverseInteger_7.h src/easy/PalindromeNumber_9.cpp src/easy/PalindromeNumber_9.h src/hard/RegularExpressionMatching_10.h src/algorithm/sort/QuickSort.h src/Common.cpp src/Common.h src/algorithm/sort/ShellSort.h src/algorithm/sort/SelectionSort.h src/algorithm/structure/BinaryHeap.h src/algorithm/Comparable.h src/data_structure/line_table/LinkedList.h src/data_structure/graph/Graph.h "src/pat/PAT_1_A_Plus_B_Format.h" "src/pat/PAT_2_Plus_B_For_Polynomials.h" "src/pat/PAT_4_Counting_Leaves.h" "src/pat/PAT_5_Spell_It_Right.h" "src/pat/PAT_6_SignIn_And_SignOut.h")